<resources>
    <string name="app_name">Hilbert Space</string>
    <string name="main_wallet">钱包</string>
    <string name="main_market">行情</string>
    <string name="main_model">HS空间</string>
    <string name="main_mine">我的</string>
    <string name="country_search">搜索</string>
    <string name="assets_section_close">关闭</string>
    <string name="assets_section_expend">展开</string>
    <string name="interface_login_success">登陆成功</string>
    <string name="interface_regist_success">注册成功</string>
    <string name="interface_send_success">发送成功</string>
    <string name="interface_change_success">修改成功</string>
    <string name="interface_exchange_success">兑换成功</string>
    <string name="interface_join_success">参与成功</string>
    <string name="interface_value_success">价值放大成功</string>
    <string name="interface_extract_success">提取成功</string>
    <string name="interface_transfer_success">转账成功</string>
    <string name="interface_add_success">添加成功</string>
    <string name="interface_reply_success">回复成功</string>
    <string name="interface_bind_success">绑定成功</string>
    <string name="interface_version_new">已经是最新版本了</string>
    <string name="interface_down_failed">下载出错，请检查网络连接状况及手机内存空间</string>
    <string name="interface_yuyue_success">预约成功</string>
    <string name="interface_upload_photo">图片上传中</string>
    <string name="interface_delete_success">删除成功</string>
    <string name="interface_no_yuyue">您还没有预约排队</string>
    <string name="interface_in_yuyue">您当前已在预约排队中，请勿重复参与！</string>
    <string name="interface_copy_success">复制成功</string>
    <string name="interface_submit_success">提交成功</string>
    <string name="interface_error_yichang">未知异常，请联系管理员</string>
    <string name="interface_error_nocunzai">用户不存在</string>
    <string name="interface_error_passworderror">密码错误</string>
    <string name="interface_error_success">请求成功</string>
    <string name="interface_error_noworkorder">不是自己的工单,不能结束</string>
    <string name="interface_error_nooldpassword">原密码错误</string>
    <string name="interface_error_nopassword">密码错误</string>
    <string name="interface_error_nologinpassword">登录密码错误</string>
    <string name="interface_error_nocodes">邀请码填写错误,请确认邀请码</string>
    <string name="interface_error_noaddress">该地址与自己不匹配,请确认</string>
    <string name="interface_error_exchange">兑换成功</string>
    <string name="interface_error_zeroparticipate">参与金额不能为0</string>
    <string name="interface_error_noavailabs">可用资金不足</string>
    <string name="interface_error_nominables">可挖取数量不足</string>
    <string name="interface_error_nocode">该邀请码不存在</string>
    <string name="interface_error_zerocapital">提取金额不能为0</string>
    <string name="interface_error_nocapital">可提取资金不足</string>
    <string name="interface_error_getcodes">请先获取验证码</string>
    <string name="interface_error_codesno">验证码不正确,请重新输入</string>
    <string name="interface_error_cophone">原手机号输入错误</string>
    <string name="interface_error_nozhujici">助记词错误</string>
    <string name="interface_error_oldnewpassword">新密码不能跟原密码一样</string>
    <string name="interface_error_gucodes">谷歌验证码错误</string>
    <string name="interface_error_phonecodes">手机验证码错误</string>
    <string name="interface_error_emailcodes">邮箱验证码错误</string>
    <string name="interface_error_duishuliang">兑换数量不能为0</string>
    <string name="interface_error_duixiaoyu">兑换数量不能小于0</string>
    <string name="interface_error_yue">您的余额不足</string>
    <string name="interface_error_tibierror">提币失败</string>
    <string name="interface_error_yuyue">您已存在预约,不能继续预约</string>
    <string name="interface_error_yuyuejine">预约金额不能为0</string>
    <string name="interface_error_exchange_zero">兑换数量不能为0</string>
    <string name="interface_error_value_zero">价值放大数量不能为0</string>
    <string name="interface_error_join_zero">挖取数量不能为0</string>
    <string name="interface_error_extract_zero">提取数量不能为0</string>
    <string name="interface_error_send_code">发送验证码失败</string>
    <string name="interface_error_phone_alread_bind">该手机号已经绑定</string>
    <string name="interface_error_mail_alread_bind">该邮箱已经绑定</string>
    <string name="interface_error_upload">上传失败</string>
    <string name="interface_error_yuyue_time">节点全网广播中，请稍候参与</string>
    <string name="interface_error_exchange_one">最小兑换数量为1</string>
    <string name="interface_error_value_one">最小放大数量为1</string>
    <string name="interface_error_extract_one">最小提取数量为1</string>
    <string name="interface_error_join_one">最小挖取数量为1</string>
    <string name="mine_uid">UID：%s</string>
    <string name="mine_money">算力明细</string>
    <string name="mine_my_group">我的社群</string>
    <string name="mine_invite">邀请分享</string>
    <string name="mine_project_apply">项目申请</string>
    <string name="mine_safe_bind">安全绑定</string>
    <string name="mine_password_manager">密码管理</string>
    <string name="mine_language">语言切换</string>
    <string name="mine_work_order">系统工单</string>
    <string name="mine_check_version">检查版本</string>
    <string name="mine_login_out">注销登录</string>
    <string name="project_apply_list">申请列表</string>
    <string name="project_apply_title">《项目申请条文》</string>
    <string name="project_apply_agree">我同意</string>
    <string name="project_coin_attribute">币种属性</string>
    <string name="project_name">项目名称</string>
    <string name="project_name_tag">请输入项目名称</string>
    <string name="project_web_address">官网地址</string>
    <string name="project_web_address_tag">请输入官网地址</string>
    <string name="project_paper_address">白皮书地址</string>
    <string name="project_paper_address_tag">请输入白皮书地址</string>
    <string name="project_exchange">上架交易所</string>
    <string name="project_exchange_tag">请输入已上架的交易所名称</string>
    <string name="project_guarantor">担保人</string>
    <string name="project_guarantor_tag">请输入担保人</string>
    <string name="project_guarantor_phone">负责人电话号</string>
    <string name="project_guarantor_phone_tag">请输入负责人电话号</string>
    <string name="project_guarantor_wx">负责人微信号/电报</string>
    <string name="project_guarantor_wx_tag">请输入正在使用的微信号/电报</string>
    <string name="project_guarantor_mail">负责人邮箱</string>
    <string name="project_guarantor_mail_tag">请输入负责人邮箱号码</string>
    <string name="project_guarantor_detail">团附介绍</string>
    <string name="project_guarantor_detail_tag">请输入其附加介绍</string>
    <string name="project_submit_apply">提交申请</string>
    <string name="bind_google">谷歌绑定</string>
    <string name="bind_phone">手机绑定</string>
    <string name="bind_mail">邮箱绑定</string>
    <string name="bind_already_bind">已绑定</string>
    <string name="bind_go_bind">去绑定</string>
    <string name="bind_go_change">修改</string>
    <string name="bind_login_password">登录密码</string>
    <string name="bind_login_password_tag">请输入登录密码</string>
    <string name="bind_phone_num">手机号码</string>
    <string name="bind_phone_num_tag">请输入需要绑定的手机号</string>
    <string name="bind_sms_code">短信验证码</string>
    <string name="bind_get_sms_code">获取验证码</string>
    <string name="bind_sure">确定</string>
    <string name="bind_mail_num">邮箱号码</string>
    <string name="bind_mail_num_tag">请输入需要绑定的邮箱号</string>
    <string name="bind_mail_code">邮箱验证码</string>
    <string name="bind_google_step_one">在应用商店中搜索“Google Authenticator”应用并下载。</string>
    <string name="bind_google_step_two">安装完成后打开Google Authenticator，点击右上角(安卓为右下角)的“+”，选择“手动输入秘钥”，页面中填入您的账户名和下方秘钥。</string>
    <string name="bind_google_step_three">添加成功后，您将得到一个有一定时效的6位数验证码，请将该验证码填入下方输入框中(需要在验证码时效内)。</string>
    <string name="bind_google_code">谷歌验证码</string>
    <string name="bind_google_code_tag">请输入谷歌验证码</string>
    <string name="bind_google_copy">复制</string>
    <string name="bind_google_next_step">下一步</string>
    <string name="bind_google_step_tag">复制秘钥或者截图保存，可能存在安全风险，请妥善保存</string>
    <string name="bind_change_phone">手机修改</string>
    <string name="bind_old_phone_tag">请输入已绑定的手机号码</string>
    <string name="bind_new_phone_tag">请输入新的手机号码</string>
    <string name="bind_google_rqcode_error">生成二维码失败</string>
    <string name="bind_send_success">验证码发送成功</string>
    <string name="bind_get_code_again">重新获取验证码</string>
    <string name="bind_change_success">修改成功</string>
    <string name="bind_setting_success">设置成功</string>
    <string name="bind_phone_country">中国 (+86)</string>
    <string name="bind_phone_select_country">选择国家</string>
    <string name="password_money_password">资金密码</string>
    <string name="password_go_setting">去设置</string>
    <string name="password_change_password_title">修改登录密码</string>
    <string name="password_old_password">旧密码</string>
    <string name="password_old_password_tag">请输入登录密码</string>
    <string name="password_new_password">新密码</string>
    <string name="password_new_password_tag">请输入6~16位密码</string>
    <string name="password_sure_password">确认密码</string>
    <string name="password_sure_password_tag">请输入确认密码</string>
    <string name="password_money_password_tag">请输入6~16位资金密码</string>
    <string name="password_zhujici_find">助记词找回</string>
    <string name="language_simplified_chinese">简体中文</string>
    <string name="language_traditional_chinese">繁體中文</string>
    <string name="language_english">English</string>
    <string name="language_wait">敬请期待</string>
    <string name="order_new">新建工单</string>
    <string name="order_title">标题</string>
    <string name="order_title_tag">请输入标题</string>
    <string name="order_detail">问题详情</string>
    <string name="order_detail_tag">请详细描述您所遇到的问题</string>
    <string name="order_reply">回复</string>
    <string name="order_service_reply">客服回复</string>
    <string name="order_reply_order">工单回复</string>
    <string name="order_close">结束工单</string>
    <string name="order_submit">提交</string>
    <string name="order_mail_tag">请输入接收反馈的邮箱号码</string>
    <string name="invite_share">分享</string>
    <string name="invite_save">保存</string>
    <string name="invite_join">%s邀请您一起加入希尔伯特空间</string>
    <string name="invite_my_code">我的邀请码</string>
    <string name="invite_click_copy">点击复制邀请码</string>
    <string name="invite_sao_qrcode">扫描二维码</string>
    <string name="invite_regist_down">注册并下载希尔伯特空间</string>
    <string name="invite_regist_down_tag">无限维去中心公式经济映射空间</string>
    <string name="invite_save_qrcode">保存二维码</string>
    <string name="login">登录</string>
    <string name="login_logining">登录中&#8230;</string>
    <string name="login_name">帐号</string>
    <string name="login_name_tag">请输入自定义帐号</string>
    <string name="login_password">密码</string>
    <string name="login_password_tag">请输入密码</string>
    <string name="login_forgot_password">忘记密码</string>
    <string name="login_regist">注册账号</string>
    <string name="login_agree_service">登录即代表阅读并同意服务协议</string>
    <string name="regist">注册</string>
    <string name="regist_sure">确定注册</string>
    <string name="regist_name_tag">请输入6~16位自定义帐号</string>
    <string name="regist_sure_tag">请再次输入密码</string>
    <string name="regist_invite_code">邀请码</string>
    <string name="regist_invite_code_tag">请输入邀请码</string>
    <string name="regist_agree_service">注册即代表阅读并同意服务协议</string>
    <string name="forgot_phone_mail">手机/邮箱找回</string>
    <string name="forgot_bind_phone_mail">绑定账号</string>
    <string name="forgot_bind_phone_mail_tag">请输入绑定的手机号/邮箱</string>
    <string name="forgot_code">验证码</string>
    <string name="forgot_code_tag">请输入验证码</string>
    <string name="forgot_paste">粘贴</string>
    <string name="wallet_safe_check">安全验证</string>
    <string name="wallet_cancel">取消</string>
    <string name="input_num_letter">1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM</string>
    <string name="input_mail">1234567890qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM.+-/*!#$%^_=,@</string>
    <string name="dialog_already_known">我已知晓</string>
    <string name="dialog_join_type_title">虫洞参与介绍</string>
    <string name="dialog_join_type_rule">出矿出算力：此方式算力结算时您的矿本和算力收益将实时到钱包。
\n\n存矿出算力：此方式算力出矿时您的矿本自动存入可提取算力中（可随时提取）矿本可以优先参与下期虫洞，算力收益将实时到钱包。
\n\n存矿存算力：此方式出矿时您的矿本和算力收益将自动存入可提取算力中，可优先参与下期虫洞，实现复利算力收益（可随时提取）。
\n\n注：存储的矿本和算力收益均受虫洞系统价值恒定保护，不受二级市场市价影响提取到钱包的矿本和算力收益，均以用户USDT总矿值对应出矿时HS/USDT实时汇率结算等值的HS数量自动到钱包，再次参与虫洞需要按照当前HS/USDT汇率参与。</string>
</resources>