<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/color_line"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/bind_google_step_three"
        android:textColor="@color/color_black"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <share.exchange.framework.widget.AutoSizeTextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bind_google_code"
            android:textColor="@color/color_black"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/et_google_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:singleLine="true"
            android:digits="@string/input_num_letter"
            android:background="@null"
            android:hint="@string/bind_google_code_tag"
            android:textColor="@color/color_black"
            android:textColorHint="@color/tab_normal_color"
            android:textSize="14sp"/>

        <share.exchange.framework.widget.AutoSizeTextView
            android:id="@+id/tv_google_paste"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/forgot_paste"
            android:textColor="@color/tab_selected_color"
            android:textSize="14sp"
            android:padding="5dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <share.exchange.framework.widget.AutoSizeTextView
            android:id="@+id/tv_google_else"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bind_login_password"
            android:textColor="@color/color_black"
            android:textSize="14sp"/>

        <EditText
            android:id="@+id/et_google_else"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:digits="@string/input_mail"
            android:layout_weight="1"
            android:background="@null"
            android:singleLine="true"
            android:hint="@string/bind_login_password_tag"
            android:textColor="@color/color_black"
            android:textColorHint="@color/tab_normal_color"
            android:textSize="14sp"/>

        <share.exchange.framework.widget.AutoSizeTextView
            android:id="@+id/tv_google_get_code"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_red_stroke_corners"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/bind_get_sms_code"
            android:textColor="@color/tab_selected_color"
            android:textSize="12sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/tv_google_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_red_corners"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/bind_sure"
        android:textColor="@color/white"
        android:textSize="16sp"/>

</LinearLayout>