<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet_safe_check"
            android:textColor="@color/tab_selected_color"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/wallet_cancel"
            android:textColor="@color/color_black"
            android:textSize="16sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/color_line"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/password_money_password"
        android:textColor="@color/color_04041D"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/et_dialog_money_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="@string/input_num_letter"
        android:inputType="textPassword"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:background="@null"
        android:hint="@string/password_money_password_tag"
        android:textColor="@color/color_black"
        android:textColorHint="@color/tab_normal_color"
        android:textSize="16sp"/>


    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="20dp"
        android:background="@color/color_line"/>

    <TextView
        android:id="@+id/tv_dialog_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_red_corners"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/bind_sure"
        android:textColor="@color/white"
        android:textSize="16sp"/>

</LinearLayout>