<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <share.exchange.framework.widget.MyScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/mine_project_apply"
                    android:textColor="@color/color_black"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/sp_project_coin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:scrollbars="none"
                    android:dropDownVerticalOffset="30dp"
                    android:spinnerMode="dropdown"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/color_line"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_name"
                android:textColor="@color/color_black"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/et_project_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/project_name_tag"
                android:singleLine="true"
                android:textColor="@color/color_black"
                android:textColorHint="@color/tab_normal_color"
                android:textSize="16sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/color_line"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_web_address"
                android:textColor="@color/color_black"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/et_project_web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/project_web_address_tag"
                android:singleLine="true"
                android:textColor="@color/color_black"
                android:textColorHint="@color/tab_normal_color"
                android:textSize="16sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/color_line"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_paper_address"
                android:textColor="@color/color_black"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/et_project_paper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/project_paper_address_tag"
                android:singleLine="true"
                android:textColor="@color/color_black"
                android:textColorHint="@color/tab_normal_color"
                android:textSize="16sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/color_line"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_exchange"
                android:textColor="@color/color_black"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/et_project_exchange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/project_exchange_tag"
                android:singleLine="true"
                android:textColor="@color/color_black"
                android:textColorHint="@color/tab_normal_color"
                android:textSize="16sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/color_line"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_guarantor_mail"
                android:textColor="@color/color_black"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/et_project_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/project_guarantor_mail_tag"
                android:singleLine="true"
                android:textColor="@color/color_black"
                android:textColorHint="@color/tab_normal_color"
                android:textSize="16sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@color/color_line"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_guarantor_detail"
                android:textColor="@color/color_black"
                android:textSize="14sp"/>

            <EditText
                android:id="@+id/et_project_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="120dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_gray_corners"
                android:gravity="left"
                android:hint="@string/project_guarantor_detail_tag"
                android:padding="3dp"
                android:textColor="@color/color_black"
                android:textColorHint="@color/tab_normal_color"
                android:textSize="16sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

        </LinearLayout>

    </share.exchange.framework.widget.MyScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <TextView
            android:id="@+id/tv_project_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bg_red_corners"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/project_submit_apply"
            android:textColor="@color/white"
            android:textSize="16sp"/>

    </RelativeLayout>

</RelativeLayout>